refactor: Migrate auth docs to yaml file
